<resources>
    <string name="app_name">Wallpicx</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Wallpaper_name">WallpaperName</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_empty_message">Widget empty. widget will automatically updated once you navigate the app.</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="Exploretxt">Explore</string>
    <string name="Recentstxt">Recents</string>
    <string name="wallpaper_imagetxt">Wallpaper Image</string>
    <string name="set_icontxt">Set Icon</string>
    <string name="save_icontxt">Save Icon</string>
    <string name="wallbar_imagetxt">WallBar Image</string>
    <string name="favourite_icontxt">Favourite Icon</string>
    <string name="recents_icontxt">Recents Icon</string>
    <string name="circle_image_icontxt">Circle Image Icon</string>
    <string name="settxt">Set</string>
    <string name="savetxt">Save</string>
    <string name="titletxt">Title</string>
    <string name="loadingtxt">LOADING...</string>
    <string name="you_have_no_recent_yettxt">You have no Recent yet.</string>
    <string name="user_nametxt">User Name</string>
    <string name="infotxt">info@wallpicx.com</string>
    <string name="set_as_home_screentxt">Set as Home screen</string>
    <string name="set_as_lock_screentxt">Set as Lock screen</string>
    <string name="set_bothtxt">Set both</string>
</resources>
