<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">

    <Button
        android:id="@+id/setOnHome"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/savebutton"
        android:text="@string/set_as_home_screentxt"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/setOnLockScreen"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/savebutton"
        android:text="@string/set_as_lock_screentxt"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/setOnBoth"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/savebutton"
        android:text="@string/set_bothtxt"
        android:textColor="#ffffff" />

</LinearLayout>